--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,6 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  /* color: rgba(255, 255, 255, 0.87);
-  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,10 +20,6 @@ a {
   color: white;
   text-decoration: inherit;
 }
-a:hover {
-  color: red;
-  background-color: white;
-}
 
 body {
   margin: 0;
@@ -34,6 +28,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: white;
+  background-color: #270e3e;
 }
 .tinos-regular {
   font-family: "Tinos", serif;
@@ -44,7 +39,32 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+nav a {
+  position: relative;
+  font-size: 1.1em;
+  color: white;
+  text-decoration: none;
+  padding: 1px 12px;
+  transition: 0.5s;
+}
 
+nav a span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border-bottom: 4px solid rgb(233, 237, 237);
+  border-radius: 15px;
+  transform: scale(0) translateY(50px);
+  opacity: 0;
+  transition: 0.5s;
+}
+nav a:hover span {
+  transform: scale(1) translateY(0);
+  opacity: 1;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -52,7 +72,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -70,12 +90,12 @@ button:focus-visible {
 }
 
 .Hero {
-  background-image: url("./assets/images/crime3.jpg");
+  background-image: url("./assets/images/Police.png");
   height: 100vh;
   background-size: cover;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
 }
-*/ .hero {
+.hero {
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
 }
@@ -86,10 +106,10 @@ form {
   align-content: center;
   padding: 0 1rem 1rem;
   margin: 0 auto;
-  background-color: rgb(132, 25, 25);
   border-radius: 0.8rem;
   width: 40%;
   margin-top: 4rem;
+  /* background: linear-gradient(to right, rgb(96, 10, 96), rgb(254, 99, 164)); */
 }
 
 .form {
@@ -131,6 +151,7 @@ select,
 label {
   font-size: 0.7rem;
 }
+/* button */
 .btn {
   color: white;
   border: 1px solid white;
@@ -142,10 +163,12 @@ label {
   font-size: 0.8rem;
   margin-top: 0.8rem;
   border-radius: 2rem;
-  background-color: rgb(132, 25, 25);
+  color: linear-gradient(to right, purple, rgb(254, 99, 164));
+
+  /* background-color: rgb(132, 25, 25); */
 }
 .btn:hover {
-  color: rgb(140, 27, 27);
+  /* color: ; */
   background-color: white;
 }
 .bttn {
@@ -153,25 +176,110 @@ label {
   width: 30%;
   padding: 0.4rem 0;
   margin-top: 1rem;
+  background: linear-gradient(to right, purple, rgb(254, 99, 164));
+
   border-radius: 2rem;
-  background-color: rgb(136, 31, 31);
+  /* background-color: rgb(136, 31, 31); */
   border: 2px solid white;
 }
 .bttn:hover {
   background-color: white;
-  color: rgb(140, 27, 27);
-  border: 2px solid rgb(140, 27, 27);
+  color: linear-gradient(to right, purple, rgb(254, 99, 164));
+
+  /* color: rgb(140, 27, 27); */
+  border: 2px solid rgb(118, 46, 129);
 }
+/* BUTTON */
+.btn,
+.bttn {
+  background-color: white;
+  border: none;
+  outline: none;
+  color: purple;
+  /* color: rgb(164, 32, 32); */
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 12px;
+}
+.btn::after,
+.bttn::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+/* glow */
+.btn::before,
+.bttn::before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ef5d5d,
+    #ffff00,
+    #f906fd,
+    #3661f0,
+    #00ffd5,
+    #0ed4f2
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 600%;
+  z-index: -1;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  filter: blur(8px);
+  animation: glowing 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+  opacity: 0;
+}
+
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+/* hover  */
+.btn:hover::before,
+.bttn:hover::before {
+  opacity: 1;
+}
+
+.btn:active:after,
+.bttn:active:after {
+  background: transparent;
+}
+
+.btn:active,
+.bttn:active {
+  color: white;
+  font-weight: bold;
+}
+/* text */
 .text {
   width: 50%;
-  /* font-size: 0.8rem; */
-  /* margin: 7rem 0; */
 }
 .image {
   width: 50%;
 }
 .image img {
   width: 90%;
+  border-radius: 1rem;
+  border: 5px solid white;
 }
 #about {
   padding: 0 3rem;
@@ -181,13 +289,97 @@ label {
   text-underline-offset: 0.3rem;
 }
 
-/* .ul {
-  width: 70%;
-  font-size: 0.8rem;
-}
-.map {
-  width: 30%;
+/* .unn-map {
+  border: 5px rgb(153, 35, 35) solid;
+  border-radius: 1rem;
 } */
+
+/* MAP STYLING */
+.unn-map {
+  /* background: #191c29; */
+  width: var(--card-width);
+  height: var(--card-height);
+  padding: 1px;
+  position: relative;
+  border-radius: 1px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  color: rgb(88 199 250 / 0%);
+  cursor: pointer;
+  font-family: cursive;
+}
+
+.unn-map:hover {
+  color: rgb(120, 10, 4);
+  transition: color 1s;
+}
+.unn-map:hover:before,
+.unn-map:hover:after {
+  animation: none;
+  opacity: 0;
+}
+
+.unn-map::before {
+  content: "";
+  width: 104%;
+  height: 102%;
+  border-radius: 0.2rem;
+  background-image: linear-gradient(
+    var(--rotate),
+    rgb(229, 12, 229),
+    /* hsl(220, 9%, 87%) 43%, */
+    rgb(253, 98, 142)
+  );
+  position: absolute;
+  z-index: -1;
+  top: -1%;
+  left: -2%;
+  animation: spin 2.5s linear infinite;
+}
+@property --rotate {
+  syntax: "<angle>";
+  initial-value: 132deg;
+  inherits: false;
+}
+
+:root {
+  --card-width: calc(var(--card-height) / 0.1);
+}
+
+.unn-map::after {
+  position: absolute;
+  content: "";
+  top: calc(var(--card-height) / 2);
+  left: 0;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  transform: scale(0.8);
+  filter: blur(calc(var(--card-height) / 2));
+  background-image: linear-gradient(
+    var(--rotate),
+    #ce1c08,
+    #f7f4f4 43%,
+    #c20a00e0
+  );
+  opacity: 1;
+  transition: opacity 0.5s;
+  animation: spin 2.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    --rotate: 0deg;
+  }
+  100% {
+    --rotate: 360deg;
+  }
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
