feat: fixed css issues

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ a {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
   background-color: white;
@@ -391,4 +391,7 @@ label {
   button {
     background-color: #f9f9f9;
   }
+}
+#root{
+  width: 100%;
 }
